[gd_scene load_steps=15 format=3 uid="uid://dbbxc8xwqu2v7"]

[ext_resource type="Script" uid="uid://befhc074vjbqn" path="res://scenes/main/game_manager/game_manager.gd" id="1_6rv6m"]
[ext_resource type="PackedScene" uid="uid://dm2s4ivsjk3fh" path="res://scenes/tools/mouse_pos_printer/mouse_pos_printer.tscn" id="2_ka1ps"]
[ext_resource type="PackedScene" uid="uid://ckmkhqqqnhrgc" path="res://scenes/main/player_manager/player_manager.tscn" id="3_1jqlk"]
[ext_resource type="PackedScene" uid="uid://dtjqgclskvduj" path="res://scenes/main/debug_menu/debug_menu.tscn" id="4_b5ef8"]
[ext_resource type="FontFile" uid="uid://d4jyi708umdxp" path="res://default.ttf" id="6_1703o"]
[ext_resource type="Script" uid="uid://c4kuc0ccp063r" path="res://scenes/main/save_manager/save_manager.gd" id="7_tl6x0"]
[ext_resource type="Script" uid="uid://cnhbbcsw8d8b" path="res://scenes/main/npc_manager/npc_manager.gd" id="8_u1jbh"]
[ext_resource type="Script" uid="uid://b3ri3kgmogrxe" path="res://scenes/main/level_manager/level_manager.gd" id="9_qeads"]
[ext_resource type="Script" uid="uid://dekgjbmxuc1f" path="res://scenes/main/spawn_manager/spawn_manager.gd" id="10_d34lw"]
[ext_resource type="Script" uid="uid://dhxviff8epo6d" path="res://scenes/main/quest_manager/quest_manager.gd" id="11_7ja3u"]
[ext_resource type="Script" uid="uid://bx63l2sso8arx" path="res://quests/aint_that_a_kick_in_the_head/aint_that_a_kick_in_the_head.gd" id="12_cixl3"]
[ext_resource type="Script" uid="uid://bs1bur0v0hwtg" path="res://quests/back_in_the_saddle/back_in_the_saddle.gd" id="13_cy1sf"]
[ext_resource type="Script" uid="uid://duqqrvdeqd0mo" path="res://scenes/main/object_manager/object_manager.gd" id="14_lcbpy"]
[ext_resource type="Script" uid="uid://b2gc61gpxobhd" path="res://scenes/main/active_waypoint.gd" id="15_ka1ps"]

[node name="GameManager" type="Node2D"]
script = ExtResource("1_6rv6m")
use_save_data = false
autosaving_enabled = false

[node name="CoordinatePrinter" parent="." instance=ExtResource("2_ka1ps")]

[node name="Player" parent="." instance=ExtResource("3_1jqlk")]
process_mode = 3
motion_mode = 1
attack_speed = 5.0

[node name="Camera" type="Camera2D" parent="Player"]
zoom = Vector2(3, 3)
position_smoothing_enabled = true

[node name="DebugMenu" parent="." instance=ExtResource("4_b5ef8")]
visible = false
scale = Vector2(0.25, 0.25)

[node name="UI" type="CanvasLayer" parent="."]

[node name="QuestDisplayer" type="VBoxContainer" parent="UI"]
custom_minimum_size = Vector2(320, 0)
offset_right = 320.0
offset_bottom = 64.0
mouse_filter = 2

[node name="Quest" type="RichTextLabel" parent="UI/QuestDisplayer"]
custom_minimum_size = Vector2(320, 24)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("6_1703o")
fit_content = true

[node name="Objective" type="RichTextLabel" parent="UI/QuestDisplayer"]
custom_minimum_size = Vector2(240, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
fit_content = true

[node name="SaveManager" type="Node" parent="."]
script = ExtResource("7_tl6x0")
debugging = true

[node name="NPCManager" type="Node" parent="."]
script = ExtResource("8_u1jbh")
speed_override = 250

[node name="LevelManager" type="Node" parent="."]
script = ExtResource("9_qeads")

[node name="MobManager" type="Node" parent="."]
script = ExtResource("10_d34lw")
spawn_enemies = false

[node name="QuestManager" type="Node" parent="."]
script = ExtResource("11_7ja3u")

[node name="AintThatAKickInTheHead" type="Node" parent="QuestManager"]
script = ExtResource("12_cixl3")
linked_quest = 1
characters = Array[int]([1])
timelines = Array[int]([1, 2, 4])
levels = Array[int]([1])

[node name="BackInTheSaddle" type="Node" parent="QuestManager"]
script = ExtResource("13_cy1sf")
linked_quest = 2
characters = Array[int]([2])
timelines = Array[int]([3, 5, 6])
levels = Array[int]([3, 2])

[node name="ObjectManager" type="Node" parent="."]
script = ExtResource("14_lcbpy")

[node name="ActiveWaypoint" type="Marker2D" parent="."]
script = ExtResource("15_ka1ps")
